@@ -57,4 +57,5 @@ Changes in version 1.5.x
 + altExp parameter to altexp
 + agglomerateByRank: make rownames unique by default
 + removed calculateDistance and calculateUniFrac alias
++ calculateUnifrac bugfix
 
